- Updated AGP - Show Toast after saving to Gallery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="label_calculate">Calculate</string>
     <string name="label_reset">Reset</string>
 
+    <!-- Notifications/Toasts -->
+    <string name="message_screenshot_saved">Screenshot Saved to Gallery</string>
+
 
 </resources>
